m4-netpol/networkpolicies.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: private
spec:
  podSelector:
    matchLabels:
      security: private
  ingress: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: public
spec:
  podSelector:
    matchLabels:
      security: public
  ingress:
  - from: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: namespace
spec:
  podSelector:
    matchLabels:
      security: namespace
  ingress:
  - from:
    - podSelector: {}
